Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/scope/6225935/T6214959.out
T6214959.java:15:7: compiler.err.ref.ambiguous: y, kindname.method, y(), a.Star, kindname.method, y(), a.Ambiguous
1 error
